# media-remote-control

./: Cargo.toml  README.md
remote_ui/: README.md  pubspec.yaml
remote_ui/android/app/: build.gradle
remote_ui/android/app/src/main/: AndroidManifest.xml
remote_ui/android/app/src/main/kotlin/com/example/remote_ui/: MainActivity.kt
remote_ui/android/app/src/profile/: AndroidManifest.xml
remote_ui/ios/Runner/: Info.plist
remote_ui/ios/Runner.xcodeproj/: project.pbxproj
remote_ui/lib/: main.dart
remote_ui/linux/: CMakeLists.txt  my_application.cc
remote_ui/macos/Runner.xcodeproj/: project.pbxproj
remote_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
remote_ui/macos/Runner/Configs/: AppInfo.xcconfig
remote_ui/test/: widget_test.dart
remote_ui/web/: index.html
remote_ui/windows/: CMakeLists.txt
remote_ui/windows/runner/: Runner.rc  main.cpp
src/: main.rs
