[package]
name = "media-remote-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulate = "0.3.0"
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
#anyhow = "1.0.56"
#simple-mdns = "0.3.9"